Se agrega Logger, Abstract DB
