# index.js
@@ -1,10 +1,15 @@
 const express = require('express');
 const app = express();
+var logger = require('./LogConfig');
 var cors = require('cors');
 var swaggerUi = require('swagger-ui-express');
 var swaggerDocument = require('./swagger.json');
 const challongeSvc =  require('./src/svc/ChallongeSvc');
-const armySvc = require('./src/svc/ArmySvc');
+var armyController = require('./src/controller/ArmyController');
+var rosterController = require('./src/controller/RosterController');
+
+const factionSvc = require('./src/svc/FactionSvc');
+
 
 //let armyFactions = new ArmyFactions();
 
@@ -20,13 +25,20 @@ app.get('/', (req, res) =>
     res.redirect('/api-docs')
 );
 
+app.use('/army', armyController);
+app.use('/roster', rosterController);
+
+/*
 app.get('/army/list/', function (req, res) {
     console.debug(req.route, '/army/list/');
     res.writeHead(200, {'Content-Type': 'application/json'});
     var promisedResult = armySvc.listArmy();
-    console.log(promisedResult);
-    res.end(JSON.stringify(promisedResult));        
+    promisedResult.then(function (result) {
+        logger.info(result);
+        res.end(JSON.stringify(result));
+    });       
 });
+*/
 
 app.get('/challonge/tournaments/', function (req, res) {
     console.debug(req.route, '/challonge/tournaments/');
@@ -34,13 +46,13 @@ app.get('/challonge/tournaments/', function (req, res) {
     var promisedResult = challongeSvc.listTournaments();
 
     promisedResult.then(function (result) {
-        console.log(result);
+        logger.info(result);
         res.end(JSON.stringify(result));
     });    
 });
 
 app.listen(process.env.PORT || 3000, function () {
-    console.log('server running on port 3000', '');
+    logger.info('server running on port 3000', 'app.listen');
 });
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
